Bug 120209 - crash while changing language of formula to english
Summary: crash while changing language of formula to english
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.4 all versions
Hardware: All All
: high major
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.4.0 target:6.3.3
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2018-09-30 09:38 UTC by Piotr Roszkowski
Modified: 2019-10-16 10:58 UTC (History)
6 users (show)

See Also:
Crash report or crash signature: ["ScFunctionWin::SetDescription()"]


Attachments
gdb bt (7.20 KB, text/plain)
2018-09-30 16:56 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Piotr Roszkowski 2018-09-30 09:38:30 UTC
Description:
Libre office always crash when you switch language of formulas to english while you editing spreedshed and change formula language to english.

crashreport.libreoffice.org/stats/crash_details/3011b638-4bbd-4b33-b675-aba3d031374f

Steps to Reproduce:
1.Run Calc in your language i.e. Polish.
2. Open sidebar for formula.
3.Open Settings Window Tools - Optons - Libre Office Calc - Formula.
4. Check "Use English function names" and click OK.
5. Try to insert any formula from sidebar.
6. Libre office Crash 


Actual Results:
Libreoffice crashes

Expected Results:
Formulas in side bar shoud change to english


Reproducible: Always


User Profile Reset: No


OpenGL enabled: Yes

Additional Info:
crashreport.libreoffice.org/stats/crash_details/3011b638-4bbd-4b33-b675-aba3d031374f
Comment 1 Oliver Brinzing 2018-09-30 15:46:23 UTC
confirming crash with:

Version: 6.1.2.1 (x64)
Build-ID: 65905a128db06ba48db947242809d14d3f9a93fe
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; 
Gebietsschema: de-DE (de_DE); Calc:
Comment 2 Julien Nabet 2018-09-30 16:56:35 UTC
Created attachment 145278 [details]
gdb bt

On pc Debian x86-64 with master sources updated yesterday, I could reproduce this.

I attached bt with symbols + content of pDesc
Comment 3 Julien Nabet 2018-09-30 18:53:56 UTC
I suppose method "UpdateFunctionList" from sc/source/ui/formdlg/dwfunctr.cxx should be called when checking/unchecking "Use English function names".

Eike: thought you might have some thoughts here.
I thought about something like mpCbEnglishFuncName->SetClickHdl( LINK( this, ...
but I'm not sure and don't know what to put.
I noticed IMPL_LINK( ScFunctionWin, SelHdl, ListBox&, rLb, void ) in sc/source/ui/formdlg/dwfunctr.cxx, should there be something for checkbox?
Should we wait for weld conversion of this part first?
Comment 4 Xisco Faulí 2018-09-30 19:45:45 UTC
Reproduced back to

Version: 5.0.0.0.alpha1+
Build ID: 0db96caf0fcce09b87621c11b584a6d81cc7df86
Locale: ca-ES (ca_ES.UTF-8)
Comment 5 Xisco Faulí 2018-09-30 19:55:19 UTC
Same with 

Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e
Comment 6 QA Administrators 2019-10-01 03:01:45 UTC Comment hidden (obsolete)
Comment 7 Oliver Brinzing 2019-10-01 17:43:37 UTC
this issue seems to be fixed, can not reroduce with:

Version: 6.3.2.2 (x64)
Build-ID: 98b30e735bda24bc04ab42594c85f7fd8be07b9c
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc:
Comment 8 Xisco Faulí 2019-10-03 09:31:35 UTC
Still reproducible in

Version: 6.4.0.0.alpha0+
Build ID: c9336bfb6bbf6d73d3f23c124262ade30133448d
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: en-US (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 9 Xisco Faulí 2019-10-03 09:33:24 UTC
(In reply to Julien Nabet from comment #3)
> I suppose method "UpdateFunctionList" from sc/source/ui/formdlg/dwfunctr.cxx
> should be called when checking/unchecking "Use English function names".
> 
> Eike: thought you might have some thoughts here.
> I thought about something like mpCbEnglishFuncName->SetClickHdl( LINK( this,
> ...
> but I'm not sure and don't know what to put.
> I noticed IMPL_LINK( ScFunctionWin, SelHdl, ListBox&, rLb, void ) in
> sc/source/ui/formdlg/dwfunctr.cxx, should there be something for checkbox?
> Should we wait for weld conversion of this part first?

Hi Caolán,
is it something that should be checked at UI level ?
Comment 10 Commit Notification 2019-10-03 18:11:04 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fad3923c32b58c401aa2497734ba03b6a6d64ec6

Resolves: tdf#120209 reload names if setting for their language changes

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Caolán McNamara 2019-10-03 18:11:45 UTC
fixed in master, backport to 6-3 in gerrit
Comment 12 Commit Notification 2019-10-05 12:22:37 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/commit/2aa275bc5fd40bbd6e5ee06296481a4fcc276e45

Resolves: tdf#120209 reload names if setting for their language changes

It will be available in 6.3.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Xisco Faulí 2019-10-16 10:58:22 UTC
Verified in

Versió: 6.4.0.0.alpha0+
ID de la construcció: 4704acf63f4fed3a99fc95ff63c82eb5a9ae3908
CPU threads: 4; OS: Linux 4.15; UI render: per defecte; VCL: gtk3; 
Configuració local: ca-ES (ca_ES.UTF-8); UI-Language: ca-ES-valencia
Calc: threaded

@Caolán, thanks for fixing this issue!