Resolves: tdf#120209 reload names if setting for their language changes

Change-Id: I386a598ae680c90e7d31bf821e7fb58391e5d45c
Reviewed-on: https://gerrit.libreoffice.org/80131
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>